--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".PerfilActivity" />
         <activity android:name=".ProgresoActivity" />
-        <activity android:name=".InfoActivity"></activity>
+        <activity android:name=".InfoActivity" />
+        <activity android:name=".VerVideoEjercicioActivity"></activity>
     </application>
 
 </manifest>
