--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,11 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".PerfilActivity" />
@@ -33,17 +37,13 @@
         <activity android:name=".Serie4Activity" />
         <activity android:name=".Descanso4Activity" />
         <activity android:name=".MainEvaluarActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".VerVideoEvaluarActivity"
             android:screenOrientation="landscape"
             android:theme="@style/NoActionBar" />
-        <activity android:name=".EspereActivity"></activity>
+        <activity android:name=".EspereActivity"/>
     </application>
 
 </manifest>
