--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/NoActionBar" >
+            android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,14 +36,13 @@
         <activity android:name=".Descanso3Activity" />
         <activity android:name=".Serie4Activity" />
         <activity android:name=".Descanso4Activity" />
-        <activity android:name=".MainEvaluarActivity">
-
-        </activity>
+        <activity android:name=".MainEvaluarActivity"></activity>
         <activity
             android:name=".VerVideoEvaluarActivity"
             android:screenOrientation="landscape"
             android:theme="@style/NoActionBar" />
-        <activity android:name=".EspereActivity"/>
+        <activity android:name=".EspereActivity" />
+        <activity android:name=".fragments.ProgresoFragment"></activity>
     </application>
 
 </manifest>
